force-app/main/default/objects/Library__c/fields/Book_Count__c.field-meta.xml
<CustomField>
    <fullName>Book_Count__c</fullName>
    <label>Book Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>