force-app/main/default/objects/Library__c/fields/Genre_of_Books__c.field-meta.xml
<CustomField>
    <fullName>Genre_of_Books__c</fullName>
    <label>Genre of  Books</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>