force-app/main/default/objects/Library__c/fields/Launch_Year__c.field-meta.xml
<CustomField>
    <fullName>Launch_Year__c</fullName>
    <label>Launch Year</label>
    <type>Date</type>
</CustomField>