force-app/main/default/objects/Library__c/fields/Total_Child_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Budget__c</fullName>
    <label>Total Child Budget</label>
    <summarizedField>Book__c.Price__c</summarizedField>
    <summaryForeignKey>Book__c.Library__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>