force-app/main/default/objects/Library__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Genre_of_Books__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Actirual Scuence</fullName>
            </value>
            <value>
                <fullName>finance</fullName>
            </value>
            <value>
                <fullName>taxation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>