force-app/main/default/objects/Library__c/recordTypes/Govt.recordType-meta.xml
<RecordType>
    <fullName>Govt</fullName>
    <active>true</active>
    <label>Govt</label>
</RecordType>