force-app/main/default/objects/Library__c/validationRules/Budget_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Total_Budget__c) || Total_Budget__c &lt; 5000</errorConditionFormula>
    <errorMessage>Total Budget cannot be Null and should be more then 5000</errorMessage>
</ValidationRule>