force-app/main/default/objects/Library__c/validationRules/budget_control.validationRule-meta.xml
<ValidationRule>
    <fullName>budget_control</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Child_Budget__c &gt; Total_Budget__c</errorConditionFormula>
    <errorMessage>maximum budget exceeded</errorMessage>
</ValidationRule>