force-app/main/default/objects/Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Budget__c</columns>
    <columns>Total_Child_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>